# RecLib

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  format_codes.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  test_requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: conf.py  index.rst  modules.rst  nextrec.basic.rst  nextrec.data.rst  nextrec.loss.rst  nextrec.rst  nextrec.utils.rst
nextrec/: __init__.py
nextrec/basic/: activation.py  callback.py  dataloader.py  features.py  layers.py  loggers.py  metrics.py  model.py
nextrec/data/: __init__.py  data_utils.py  preprocessor.py
nextrec/loss/: __init__.py  loss_utils.py  match_losses.py
nextrec/models/match/: __init__.py  dssm.py  dssm_v2.py  mind.py  sdm.py  youtube_dnn.py
nextrec/models/multi_task/: esmm.py  mmoe.py  ple.py  share_bottom.py
nextrec/models/ranking/: __init__.py  afm.py  autoint.py  dcn.py  deepfm.py  dien.py  din.py  fibinet.py  fm.py  masknet.py  pnn.py  widedeep.py  xdeepfm.py
nextrec/utils/: __init__.py  common.py  embedding.py  initializer.py  optimizer.py
recforge/: __init__.py
recforge/basic/: dataloader.py  features.py  layers.py  loggers.py  model.py
recforge/data/: __init__.py  data_utils.py  preprocessor.py
recforge/loss/: __init__.py  loss_utils.py
recforge/models/match/: dssm.py  dssm_v2.py  mind.py  sdm.py  youtube_dnn.py
recforge/models/multi_task/: adatt.py  esmm.py  mmoe.py  pepnet.py  ple.py  share_bottom.py  star.py
recforge/models/ranking/: afm.py  autoint.py  dcn.py  deepfm.py  dien.py  din.py  fibinet.py  fm.py  masknet.py  pnn.py  widedeep.py  xdeepfm.py
recforge/utils/: __init__.py  common.py  embedding.py  initializer.py  optimizer.py
reclib/: __init__.py
reclib/basic/: __init__.py  activation.py  callback.py  data.py  dataloader.py  features.py  input.py  layers.py  loggers.py  metrics.py  model.py
reclib/data/: __init__.py  data_utils.py  preprocessor.py  utils.py
reclib/datasets/: __init__.py  base.py  criteo.py  movielens.py  preprocessing.py  registry.py
reclib/loss/: __init__.py  loss_utils.py  match_losses.py  utils.py
reclib/models/match/: __init__.py  dssm.py  dssm_v2.py  mind.py  sdm.py  youtube_dnn.py
reclib/models/multi_task/: esmm.py  mmoe.py  ple.py  share_bottom.py
reclib/models/ranking/: __init__.py  autoint.py  dcn.py  deepfm.py  dien.py  din.py  widedeep.py  xdeepfm.py
reclib/utils/: __init__.py  common.py  embedding.py  feature_processor.py  initializer.py  optimizer.py  tools.py
test/: __init__.py  conftest.py  run_tests.py  test_data_preprocessor.py  test_dataloader.py  test_layers.py  test_match_models.py  test_multitask_models.py  test_ranking_models.py  test_utils.py
tutorials/: example_datasets.py  example_match_dssm.py  example_multitask.py  example_ranking_din.py  generate_datasets.py  movielen_match_dssm.py  movielen_ranking_deepfm.py
