[project]
name = "nextrec"
version = "0.1.5"
description = "A comprehensive recommendation library with match, ranking, and multi-task learning models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "zerolovesea", email = "zyaztec@gmail.com" }
]
keywords = ["recommendation", "deep-learning", "pytorch", "ctr", "ranking", "match"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    
    # macos
    "numpy>=1.24.0; sys_platform == 'darwin'",
    "pandas>=2.0.0; sys_platform == 'darwin'",
    "scipy>=1.10.0; sys_platform == 'darwin'",
    "scikit-learn>=1.3.0; sys_platform == 'darwin'",
    "pyarrow>=12.0.0; sys_platform == 'darwin'",
    "fastparquet>=2023.4.0; sys_platform == 'darwin'",
    "tqdm>=4.65.0; sys_platform == 'darwin'",

    # windows
    "numpy>=1.23.0; sys_platform == 'win32'",
    "pandas>=2.1.0,<2.3.0; sys_platform == 'win32'",
    "scipy>=1.10.0; sys_platform == 'win32'",
    "scikit-learn>=1.3.0; sys_platform == 'win32'",
    "pyarrow>=12.0.0,<15.0.0; sys_platform == 'win32'",
    "fastparquet>=2023.4.0; sys_platform == 'win32'",

    #linux
    "numpy>=1.21,<2.0; sys_platform == 'linux'",
    "pandas>=1.5,<2.0; sys_platform == 'linux'",
    "scipy>=1.8,<1.12; sys_platform == 'linux'",
    "scikit-learn>=1.2,<2.0; sys_platform == 'linux'",
    "pyarrow>=10.0.0,<13.0.0; sys_platform == 'linux'",
    "fastparquet>=2023.4.0,<2024.0.0; sys_platform == 'linux'",    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "pytest-html>=3.2.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/zerolovesea/NextRec"
Repository = "https://github.com/zerolovesea/NextRec"
Documentation = "https://github.com/zerolovesea/NextRec/blob/main/README.md"
Issues = "https://github.com/zerolovesea/NextRec/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nextrec"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "pytest-html>=3.2.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["nextrec"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
